[gd_scene format=3 uid="uid://fshebqn7xfwc"]

[ext_resource type="Script" uid="uid://svgpn7k26af2" path="res://MainMenu.gd" id="1_0fbet"]

[node name="Control" type="Control" unique_id=440154826]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1992282512]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.99700004
anchor_bottom = 1.0
offset_right = -0.08001709
alignment = 1

[node name="Host" type="Button" parent="VBoxContainer" unique_id=1587935562]
layout_mode = 2
text = "HOST
"

[node name="Join" type="Button" parent="VBoxContainer" unique_id=686036918]
layout_mode = 2
text = "JOIN"

[node name="Label" type="Label" parent="VBoxContainer" unique_id=515849980]
layout_mode = 2

[node name="RoomList" type="VBoxContainer" parent="VBoxContainer" unique_id=853367789]
layout_mode = 2

[node name="StatusIndicator" type="StatusIndicator" parent="VBoxContainer" unique_id=350406366]

[connection signal="button_down" from="VBoxContainer/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="VBoxContainer/Join" to="." method="_on_join_button_down"]
